--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Add compiler flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -g -O0 -fno-strict-aliasing")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -Wextra -O3 -fno-strict-aliasing")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -Wextra -Ofast -march=native -flto -fno-strict-aliasing")
+
+# Apply optimization flags to all build types (for perft performance)
+add_compile_options(-Ofast -march=native)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)  # Enable LTO
 
 # Set default build type to Debug if not specified
 if(NOT CMAKE_BUILD_TYPE)
